--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
         <div id='main'>
           <h2>{{page.title}}</h2>
           {{ content }}
-          <script src="http://connect.facebook.net/en_US/all.js#appId=131586340196079&amp;xfbml=1"></script><fb:comments href="http://brandon-harris.com/{{page.url}}" num_posts="10" width="500"></fb:comments>
+          <script src="http://connect.facebook.net/en_US/all.js#appId=131586340196079&amp;xfbml=1"></script><fb:comments href="http://brandon-harris.com{{page.url}}" num_posts="10" width="500"></fb:comments>
         </div> 
         <div id='sub'> 
           <div id='pages'> 
