--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,13 @@
 <h1> 
   <a href='/'>{{site.title}}</a> 
-</h1> 
-<a class='rss' href='/atom.xml' title='Subscribe To Feed'> 
-  <img alt='Posts Feed' src='/images/rss.png' /> 
-</a> 
+</h1>
+<ul> 
+  <li><a href="/portfolio.html">Portfolio</a></li> 
+  <li><a href="/archives.html">Archives</a></li> 
+  <li class='last'>
+    <a href='/atom.xml' title='Subscribe To Feed'> 
+      <img alt='Posts Feed' src='/images/rss.png' />
+    </a>
+  </li>
+</ul> 
+<div class="clearfix"></div>
