--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,9 +1,5 @@
 <h2><a href='{{post.url}}'>{{post.title}}</a></h2>
 <div class="entrybody">
-  <div class="date">
-    <p class="month">{{post.date | date:"%b"}}</p>
-    <p class="day">{{post.date | date:"%d"}}</p>
-  </div>
   {{post.content}}
   {% if post.categories | size > 0 %}
     <div class="meta right">
@@ -11,7 +7,7 @@
         <li class="tags">
           Tagged
           {% for category in post.categories %}
-          <a href="/tags/{{category}}">{{category}}</a>
+            <a href="/tags/{{category}}.html">{{category}}</a>
           {% endfor %}
         </li>
       </ul>
