--- a/stylesheets/syntax.css
+++ b/stylesheets/syntax.css
@@ -1,21 +1,22 @@
-.highlight  { background: #ffffff; padding: 0 0 0 70px; font-size: 14px; overflow: auto;}
-.highlight .c { color: #999988; font-style: italic } /* Comment */
+pre {font-family: "Deja Vu Sans Mono", "Bitstream Vera Sans Mono", "monospace"}
+.highlight  { background: #1a0f0b; padding: 0 10px; font-weight: bold; color: #c3be98; font-size: 14px; overflow: auto;}
+.highlight .c { color: #999d63; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
 .highlight .o { font-weight: bold } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .cm { color: #999d63; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #999d63; font-weight: bold } /* Comment.Preproc */
+.highlight .c1 { color: #999d63; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #999d63; font-weight: bold; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
 .highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #999999 } /* Generic.Heading */
+.highlight .gh { color: #b3935c } /* Generic.Heading */
 .highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
 .highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-.highlight .go { color: #444444 } /* Generic.Output */
-.highlight .gp { color: #555555 } /* Generic.Prompt */
+.highlight .go { color: #ddddd } /* Generic.Output */
+.highlight .gp { color: #8a9a95 } /* Generic.Prompt */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #aaaaaa } /* Generic.Subheading */
 .highlight .gt { color: #aa0000 } /* Generic.Traceback */
@@ -23,38 +24,38 @@
 .highlight .kd { font-weight: bold } /* Keyword.Declaration */
 .highlight .kp { font-weight: bold } /* Keyword.Pseudo */
 .highlight .kr { font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
+.highlight .kt { color: #f1e694; } /* Keyword.Type */
 .highlight .m { color: #009999 } /* Literal.Number */
 .highlight .s { color: #d14 } /* Literal.String */
 .highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
-.highlight .no { color: #008080 } /* Name.Constant */
+.highlight .nb { color: #c3be98 } /* Name.Builtin */
+.highlight .nc { color: #f1e694 } /* Name.Class */
+.highlight .no { color: #f1e694 } /* Name.Constant */
 .highlight .ni { color: #800080 } /* Name.Entity */
 .highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
 .highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
 .highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
+.highlight .nt { color: #9b703f } /* Name.Tag */
+.highlight .nv { color: #8a9a95 } /* Name.Variable */
 .highlight .ow { font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
 .highlight .mf { color: #009999 } /* Literal.Number.Float */
 .highlight .mh { color: #009999 } /* Literal.Number.Hex */
 .highlight .mi { color: #009999 } /* Literal.Number.Integer */
 .highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d14 } /* Literal.String.Backtick */
-.highlight .sc { color: #d14 } /* Literal.String.Char */
-.highlight .sd { color: #d14 } /* Literal.String.Doc */
-.highlight .s2 { color: #d14 } /* Literal.String.Double */
-.highlight .se { color: #d14 } /* Literal.String.Escape */
-.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
-.highlight .si { color: #d14 } /* Literal.String.Interpol */
-.highlight .sx { color: #d14 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
+.highlight .sb { color: #7ca563 } /* Literal.String.Backtick */
+.highlight .sc { color: #7ca563 } /* Literal.String.Char */
+.highlight .sd { color: #7ca563 } /* Literal.String.Doc */
+.highlight .s2 { color: #7ca563 } /* Literal.String.Double */
+.highlight .se { color: #7ca563 } /* Literal.String.Escape */
+.highlight .sh { color: #7ca563 } /* Literal.String.Heredoc */
+.highlight .si { color: #7ca563 } /* Literal.String.Interpol */
+.highlight .sx { color: #7ca563 } /* Literal.String.Other */
+.highlight .sr { color: #999d63 } /* Literal.String.Regex */
+.highlight .s1 { color: #7ca563 } /* Literal.String.Single */
+.highlight .ss { color: #cf6a4c } /* Literal.String.Symbol */
 .highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
+.highlight .vc { color: #8a9a95 } /* Name.Variable.Class */
+.highlight .vg { color: #8a9a95 } /* Name.Variable.Global */
+.highlight .vi { color: #8a9a95 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
