change border color

--- a/_includes/shouts.html
+++ b/_includes/shouts.html
@@ -3,8 +3,11 @@
   <li> 
     <a href='http://www.jonathanspies.com'>Jonathan Spies (Developer)</a> 
   </li> 
+  <li>
+    <a href='http://leebillington.com'>Lee Billington (Designer)</a>
+  </li>
   <li> 
-    <a href='http://www.shayisdale.com'>Shay Isdale (Designer)</a> 
+    <a href='http://www.shayisdale.com'>Shay Isdale (Designer)</a>
   </li> 
   <li> 
     <a href='http://www.katemorris.com'>Kate Morris (SEO Expert)</a> 
