--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
   <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" /> 
   <link href="/stylesheets/syntax.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="/javascripts/jquery.js" type="text/javascript"></script> 
-  <link href="/atom.xml" rel="alternate" title="ATOM" type="application/atom+xml" /> 
+  <link href="/atom.xml" rel="alternate" title="ATOM" type="application/atom+xml" />
+  {% include typekit %}
 </head> 
 <body> 
   <div id='wrapper'> 
