correctly add typekit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <link href="/stylesheets/syntax.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="/javascripts/jquery.js" type="text/javascript"></script> 
   <link href="/atom.xml" rel="alternate" title="ATOM" type="application/atom+xml" />
-  {% include typekit %}
+  {% include typekit.html %}
 </head> 
 <body> 
   <div id='wrapper'> 
