--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <link href="/stylesheets/syntax.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="/javascripts/jquery.js" type="text/javascript"></script> 
   <link href="/atom.xml" rel="alternate" title="ATOM" type="application/atom+xml" /> 
-  {% include typkit %}
+  {% include typkit.html %}
 </head> 
 <body> 
   <div id='wrapper'> 
