Fix Hugo version compatibility for Cloudflare Pages
- Patch PaperMod theme to remove merge function (requires Hugo 0.56+)
  Modified: themes/PaperMod/layouts/_default/_markup/render-image.html
- Add .hugoversion file to specify Hugo 0.120.0
- Add .cloudflare/pages.toml with build configuration

This fixes the Cloudflare Pages build error:
"function 'merge' not defined" which occurred because Cloudflare
was using Hugo 0.54.0 but PaperMod requires newer features.

--- a/themes/PaperMod/layouts/_default/_markup/render-image.html
+++ b/themes/PaperMod/layouts/_default/_markup/render-image.html
@@ -12,11 +12,5 @@
     {{- end -}}
   {{- end -}}
 {{- end -}}
-{{- $attributes := merge .Attributes (dict "alt" .Text "src" $src "title" (.Title | transform.HTMLEscape) "loading" "lazy") -}}
-<img
-  {{- range $k, $v := $attributes -}}
-    {{- if $v -}}
-      {{- printf " %s=%q" $k $v | safeHTMLAttr -}}
-    {{- end -}}
-  {{- end -}}>
+<img src="{{ $src }}" alt="{{ .Text }}" title="{{ .Title | transform.HTMLEscape }}" loading="lazy">
 {{- /**/ -}}
